# pink

./: .gitignore  .netlify.toml  .pre-commit-config.yaml  Cargo.toml  README.md  renovate.json  rustc-ice-2025-02-19T17_57_00-40929.txt
.cargo/: config.toml
benches/: parse.rs
bindings/python/: Cargo.toml  build.rs  pyproject.toml  test.py
bindings/python/src/: file.rs  lib.rs
bindings/python/tests/: test_basic.rs
codegen-bindings-generator/: Cargo.toml
codegen-bindings-generator/src/: lib.rs  python.rs
codegen-bindings-generator/src/python/: ast.rs  common.rs  cst.rs  generator.rs  helpers.rs
codegen-bindings-generator/src/python/snapshots/: codegen_bindings_generator__python__generator__tests__generate_bindings.snap  codegen_bindings_generator__python__generator__tests__python.snap  codegen_bindings_generator__python__generator__tests__rust.snap  codegen_bindings_generator__python__generator__tests__typescript.snap
codegen-sdk-ast/: Cargo.toml  build.rs
codegen-sdk-ast-generator/: Cargo.toml
codegen-sdk-ast-generator/src/: generator.rs  lib.rs  query.rs  resolution.rs  visitor.rs
codegen-sdk-ast-generator/src/query/: field.rs  symbol.rs
codegen-sdk-ast-generator/src/resolution/: dependencies.rs  references.rs  scope.rs  stack.rs
codegen-sdk-ast-generator/src/snapshots/: codegen_sdk_ast_generator__visitor__tests__generate_visitor.snap  codegen_sdk_ast_generator__visitor__tests__python.snap  codegen_sdk_ast_generator__visitor__tests__typescript.snap
codegen-sdk-ast/src/: input.rs  lib.rs  main.rs
codegen-sdk-ast/tests/: test_typescript.rs
codegen-sdk-common/: Cargo.toml
codegen-sdk-common/src/: errors.rs  file.rs  hash.rs  language.rs  lib.rs  main.rs  naming.rs  parser.rs  point.rs  query.rs  serialize.rs  traits.rs  tree.rs  tree_sitter.rs  utils.rs
codegen-sdk-common/src/generator/: format.rs
codegen-sdk-common/src/language/: java.rs  javascript.rs  json.rs  jsx.rs  python.rs  query.rs  ts_query.rs  tsx.rs  typescript.rs
codegen-sdk-common/src/tree/: context.rs  id.rs  point.rs  range.rs  tree.rs
codegen-sdk-cst/: Cargo.toml  build.rs
codegen-sdk-cst-generator/: Cargo.toml
codegen-sdk-cst-generator/src/: generator.rs  lib.rs  parser.rs
codegen-sdk-cst-generator/src/generator/: constants.rs  enum_generator.rs  field.rs  format.rs  naming.rs  node.rs  state.rs  struct_generator.rs  utils.rs
codegen-sdk-cst-generator/src/generator/snapshots/: codegen_sdk_cst_generator__generator__field__tests__get_constructor_field-2.snap  codegen_sdk_cst_generator__generator__field__tests__get_constructor_field-3.snap  codegen_sdk_cst_generator__generator__field__tests__get_constructor_field.snap  codegen_sdk_cst_generator__generator__field__tests__get_struct_field-2.snap  codegen_sdk_cst_generator__generator__field__tests__get_struct_field-3.snap  codegen_sdk_cst_generator__generator__field__tests__get_struct_field.snap  codegen_sdk_cst_generator__generator__node__tests__get_children_by_field_name_impl.snap  codegen_sdk_cst_generator__generator__node__tests__get_children_field_impl.snap  codegen_sdk_cst_generator__generator__node__tests__get_enum_tokens-2.snap  codegen_sdk_cst_generator__generator__node__tests__get_enum_tokens.snap  codegen_sdk_cst_generator__generator__node__tests__get_struct_tokens_complex.snap  codegen_sdk_cst_generator__generator__node__tests__get_struct_tokens_simple.snap  codegen_sdk_cst_generator__generator__node__tests__get_struct_tokens_with_fields.snap  codegen_sdk_cst_generator__generator__node__tests__get_struct_tokens_with_single_child_type.snap  codegen_sdk_cst_generator__generator__node__tests__get_trait_implementations.snap  codegen_sdk_cst_generator__generator__state__tests__add_field_subenums.snap  codegen_sdk_cst_generator__generator__state__tests__add_field_subenums_missing_node-2.snap  codegen_sdk_cst_generator__generator__state__tests__add_field_subenums_missing_node.snap  codegen_sdk_cst_generator__generator__state__tests__get_enum.snap  codegen_sdk_cst_generator__generator__state__tests__get_structs.snap  codegen_sdk_cst_generator__generator__state__tests__parse_children.snap  codegen_sdk_cst_generator__generator__state__tests__parse_children_subtypes.snap
codegen-sdk-cst-generator/src/snapshots/: codegen_sdk_cst_generator__test_util__snapshot_string-3.snap  codegen_sdk_cst_generator__test_util__snapshot_string.snap
codegen-sdk-cst-generator/src/tests/: test_subtypes.rs  test_subtypes_children.rs  test_subtypes_multiple_inheritance.rs  test_subtypes_recursive.rs
codegen-sdk-cst-generator/src/tests/snapshots/: codegen_sdk_cst_generator__tests__test_subtypes__basic_subtypes.snap  codegen_sdk_cst_generator__tests__test_subtypes__deeply_nested_subtypes.snap  codegen_sdk_cst_generator__tests__test_subtypes__subtypes_with_fields.snap  codegen_sdk_cst_generator__tests__test_subtypes_children__subtypes_with_children.snap  codegen_sdk_cst_generator__tests__test_subtypes_multiple_inheritance__multiple_inheritance.snap  codegen_sdk_cst_generator__tests__test_subtypes_recursive__recursive_subtypes.snap
codegen-sdk-cst-generator/tests/: test_python.rs  test_subtypes.rs  test_subtypes_children.rs  test_subtypes_multiple_inheritance.rs  test_subtypes_recursive.rs
codegen-sdk-cst/src/: database.rs  input.rs  language.rs  lib.rs  main.rs  query.rs
codegen-sdk-macros/: Cargo.toml
codegen-sdk-macros/src/: lib.rs
codegen-sdk-resolution/: Cargo.toml
codegen-sdk-resolution/src/: codebase.rs  compute.rs  database.rs  file.rs  lib.rs  name.rs  parse.rs  references.rs  resolve_type.rs  scope.rs
languages/codegen-sdk-javascript/: Cargo.toml  build.rs
languages/codegen-sdk-javascript/src/: lib.rs
languages/codegen-sdk-json/: Cargo.toml  build.rs
languages/codegen-sdk-json/src/: lib.rs
languages/codegen-sdk-markdown/: Cargo.toml
languages/codegen-sdk-markdown/src/: lib.rs
languages/codegen-sdk-rust/: Cargo.toml
languages/codegen-sdk-rust/src/: lib.rs
languages/codegen-sdk-ts_query/: Cargo.toml
languages/codegen-sdk-yaml/: Cargo.toml  build.rs
languages/codegen-sdk-yaml/src/: lib.rs
src/: lib.rs  (+5 more)
(+36 files in other folders)
