[package]
name = "codegen-sdk-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
codegen-sdk-analyzer = { path = "codegen-sdk-analyzer" }
codegen-sdk-cst = { workspace = true }
codegen-sdk-common = { workspace = true }
crossbeam = "0.8.4"
glob = "0.3.2"
env_logger = { workspace = true }
log = { workspace = true }
rayon = { workspace = true}
sysinfo = "0.33.1"
rkyv.workspace = true
[dev-dependencies]
test-log = { workspace = true }
[workspace]
members = [
  "codegen-sdk-analyzer",
  "codegen-sdk-ast", "codegen-sdk-ast-generator",
  "codegen-sdk-common",
  "codegen-sdk-cst",
  "codegen-sdk-cst-generator", "codegen-sdk-macros",
]
[workspace.dependencies]
rayon = "1.10.0"
env_logger = "0.11.6"
log = "0.4.25"
tree-sitter = "0.25.1"
tree-sitter-python = "0.23.6"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.0"
tree-sitter-java = "0.23.5"
bytes = "1.10.0"
convert_case = "0.7.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = { version = "1.0.95", features = ["backtrace"] }
rkyv = { version = "0.8.10", features = ["bytes-1","pointer_width_64"] }
test-log = "0.2.17"
enum_delegate = "0.2.0"
mockall = "0.13.1"
codegen-sdk-common = { path = "codegen-sdk-common" }
codegen-sdk-cst = { path = "codegen-sdk-cst", features = ["typescript"]}
codegen-sdk-ast = { path = "codegen-sdk-ast" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
