cargo-features = ["codegen-backend"]
[package]
name = "codegen-sdk-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
codegen-sdk-analyzer = { path = "codegen-sdk-analyzer" }
codegen-sdk-ast = { workspace = true}
codegen-sdk-common = { workspace = true}
crossbeam = "0.8.4"
glob = "0.3.2"
env_logger = { workspace = true }
log = { workspace = true }
rayon = { workspace = true}
sysinfo = "0.33.1"
rkyv.workspace = true
[features]
python = [ "codegen-sdk-ast/python"] # TODO: Add python support
typescript = [ "codegen-sdk-ast/typescript"]
tsx = [ "codegen-sdk-ast/tsx"]
jsx = [ "codegen-sdk-ast/jsx"]
javascript = [ "codegen-sdk-ast/typescript"]
json = [ "codegen-sdk-ast/json"]
java = [ "codegen-sdk-ast/java"]
ruby = [ "codegen-sdk-ast/ruby"]
rust = [ "codegen-sdk-ast/rust"]
go = [ "codegen-sdk-ast/go"]
markdown = [ "codegen-sdk-ast/markdown"]
yaml = [ "codegen-sdk-ast/yaml"]
toml = [ "codegen-sdk-ast/toml"]
ts_query = []
default = ["json", "ts_query", "toml", "typescript"]
[dev-dependencies]
test-log = { workspace = true }
[workspace]
members = [
  "codegen-sdk-analyzer",
  "codegen-sdk-ast", "codegen-sdk-ast-generator",
  "codegen-sdk-common",
  "codegen-sdk-cst",
  "codegen-sdk-cst-generator", "codegen-sdk-macros",
]
[workspace.dependencies]
rayon = "1.10.0"
env_logger = "0.11.6"
log = "0.4.25"
tree-sitter = "0.25.1"
tree-sitter-python = "0.23.6"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.0"
tree-sitter-java = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23.2"
tree-sitter-go = "0.23.4"
tree-sitter-md = "0.3.2"
tree-sitter-yaml = "0.7.0"
tree-sitter-toml-ng = "0.7.0"
bytes = "1.10.0"
convert_case = "0.7.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = { version = "1.0.95", features = ["backtrace"] }
rkyv = { version = "0.8.10", features = ["bytes-1","pointer_width_64"] }
test-log = "0.2.17"
enum_delegate = "0.2.0"
mockall = "0.13.1"
codegen-sdk-common = { path = "codegen-sdk-common" }
codegen-sdk-cst = { path = "codegen-sdk-cst"}
codegen-sdk-ast = { path = "codegen-sdk-ast" }
codegen-sdk-cst-generator = { path = "codegen-sdk-cst-generator" }
tempfile = "3.16.0"
quote = "1.0.38"
proc-macro2 = "1.0.93"
derive-visitor = "0.4.0"
insta = "1.42.1"
prettyplease = "0.2.29"
syn = { version = "2.0.98", features = ["proc-macro"] }
derive_more = { version = "2.0.1", features = ["debug", "display"] }
salsa = "0.18.0"

[profile.dev]
debug = 0
# codegen-backend = "cranelift"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.test]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
# codegen-backend = "cranelift"
