cargo-features = ["codegen-backend"]

[package]
name = "codegen-sdk-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
codegen-sdk-analyzer = { path = "codegen-sdk-analyzer" }
codegen-sdk-ast = { workspace = true}
codegen-sdk-common = { workspace = true}
codegen-sdk-python = { workspace = true, optional = true}
codegen-sdk-typescript = { workspace = true, optional = true}
codegen-sdk-tsx = { workspace = true, optional = true}
codegen-sdk-jsx = { workspace = true, optional = true}
codegen-sdk-javascript = { workspace = true, optional = true}
codegen-sdk-json = { workspace = true, optional = true}
codegen-sdk-java = { workspace = true, optional = true}
codegen-sdk-ruby = { workspace = true, optional = true}
codegen-sdk-rust = { workspace = true, optional = true}
codegen-sdk-go = { workspace = true, optional = true}
codegen-sdk-markdown = { workspace = true, optional = true}
codegen-sdk-yaml = { workspace = true, optional = true}
codegen-sdk-toml = { workspace = true, optional = true}

crossbeam = "0.8.4"
glob = "0.3.2"
env_logger = { workspace = true }
log = { workspace = true }
rayon = { workspace = true}
sysinfo = "0.33.1"
rkyv.workspace = true
[features]
python = [ "codegen-sdk-python"] # TODO: Add python support
typescript = [ "codegen-sdk-typescript"]
tsx = [ "codegen-sdk-tsx"]
jsx = [ "codegen-sdk-jsx"]
javascript = [ "codegen-sdk-javascript"]
json = [ "codegen-sdk-json"]
java = [ "codegen-sdk-java"]
ruby = [ "codegen-sdk-ruby"]
rust = [ "codegen-sdk-rust"]
go = [ "codegen-sdk-go"]
markdown = [ "codegen-sdk-markdown"]
yaml = [ "codegen-sdk-yaml"]
toml = [ "codegen-sdk-toml"]
ts_query = []
default = ["json", "ts_query", "toml", "typescript"]
[dev-dependencies]
test-log = { workspace = true }
[workspace]
members = [
  "codegen-sdk-analyzer",
  "codegen-sdk-ast", "codegen-sdk-ast-generator",
  "codegen-sdk-common",
  "codegen-sdk-cst",
  "codegen-sdk-cst-generator",
  "codegen-sdk-macros",
  "languages/codegen-sdk-json",
  "languages/codegen-sdk-python",
  "languages/codegen-sdk-java",
  "languages/codegen-sdk-ruby",
  "languages/codegen-sdk-rust",
  "languages/codegen-sdk-go",
  "languages/codegen-sdk-jsx",
  "languages/codegen-sdk-tsx",
  "languages/codegen-sdk-javascript",
  "languages/codegen-sdk-markdown",
  "languages/codegen-sdk-yaml",
  "languages/codegen-sdk-toml",
  "languages/codegen-sdk-ts_query",
  "languages/codegen-sdk-typescript",
]
resolver = "2"
[workspace.dependencies]
rayon = "1.10.0"
env_logger = "0.11.6"
log = "0.4.25"
tree-sitter = "0.25.1"
tree-sitter-python = "0.23.6"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.0"
tree-sitter-java = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23.2"
tree-sitter-go = "0.23.4"
tree-sitter-md = "0.3.2"
tree-sitter-yaml = "0.7.0"
tree-sitter-toml-ng = "0.7.0"
bytes = "1.10.0"
convert_case = "0.7.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = { version = "1.0.95", features = ["backtrace"] }
rkyv = { version = "0.8.10", features = ["bytes-1","pointer_width_64"] }
test-log = "0.2.17"
ambassador = "0.4.1"
mockall = "0.13.1"
codegen-sdk-common = { path = "codegen-sdk-common" }
codegen-sdk-cst = { path = "codegen-sdk-cst"}
codegen-sdk-ast = { path = "codegen-sdk-ast" }
codegen-sdk-cst-generator = { path = "codegen-sdk-cst-generator" }
codegen-sdk-ast-generator = { path = "codegen-sdk-ast-generator" }
codegen-sdk-ts_query = { path = "languages/codegen-sdk-ts_query" }
codegen-sdk-typescript = { path = "languages/codegen-sdk-typescript" }
codegen-sdk-python = { path = "languages/codegen-sdk-python" }
codegen-sdk-java = { path = "languages/codegen-sdk-java" }
codegen-sdk-ruby = { path = "languages/codegen-sdk-ruby" }
codegen-sdk-rust = { path = "languages/codegen-sdk-rust" }
codegen-sdk-go = { path = "languages/codegen-sdk-go" }
codegen-sdk-markdown = { path = "languages/codegen-sdk-markdown" }
codegen-sdk-yaml = { path = "languages/codegen-sdk-yaml" }
codegen-sdk-toml = { path = "languages/codegen-sdk-toml" }
codegen-sdk-jsx = { path = "languages/codegen-sdk-jsx" }
codegen-sdk-tsx = { path = "languages/codegen-sdk-tsx" }
codegen-sdk-javascript = { path = "languages/codegen-sdk-javascript" }
codegen-sdk-json = { path = "languages/codegen-sdk-json" }
tempfile = "3.16.0"
quote = "1.0.38"
proc-macro2 = "1.0.93"
derive_generic_visitor = "0.1.1"
insta = "1.42.1"
prettyplease = "0.2.29"
syn = { version = "2.0.98", features = ["proc-macro"] }
derive_more = { version = "2.0.1", features = ["debug", "display"] }
salsa = "0.18.0"
subenum = {git = "https://github.com/mrenow/subenum", branch = "main"}
[profile.dev]
debug = 0
codegen-backend = "cranelift"
overflow-checks = false
opt-level = 0
# split-debuginfo = "unpacked"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
syn.opt-level = 3
convert_case.opt-level = 3
codegen-sdk-cst-generator.opt-level = 3
codegen-sdk-common.opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.test.package."codegen-sdk-cst"]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
codegen-units = 256
incremental = true
codegen-backend = "cranelift"
[profile.test]
lto = false
