[package]
name = "codegen-sdk-ast"
version = "0.1.0"
edition = "2024"

[dependencies]
codegen-sdk-cst = { workspace = true}
codegen-sdk-common = { workspace = true }
derive_generic_visitor = { workspace = true }
codegen-sdk-macros = { path = "../codegen-sdk-macros"}
log = { workspace = true }
salsa = { workspace = true }
[build-dependencies]
codegen-sdk-common = { workspace = true }
env_logger = { workspace = true }
rayon = { workspace = true }
codegen-sdk-ast-generator = { path = "../codegen-sdk-ast-generator"}
[dev-dependencies]
test-log = { workspace = true }
tempfile = { workspace = true }
[features]
python = [ "codegen-sdk-cst/python"]
typescript = [ "codegen-sdk-cst/typescript"]
tsx = [ "codegen-sdk-cst/tsx"]
jsx = [ "codegen-sdk-cst/jsx"]
javascript = [ "codegen-sdk-cst/typescript"]
json = [ "codegen-sdk-cst/json"]
java = [ "codegen-sdk-cst/java"]
rust = [ "codegen-sdk-cst/rust"]
go = [ "codegen-sdk-cst/go"]
ruby = [ "codegen-sdk-cst/ruby"]
yaml = [ "codegen-sdk-cst/yaml"]
toml = [ "codegen-sdk-cst/toml"]
markdown = [ "codegen-sdk-cst/markdown"]
ts_query = []
default = ["json", "ts_query", "typescript"]
