[package]
name = "codegen-sdk-ast"
version = "0.1.0"
edition = "2024"

[dependencies]
codegen-sdk-cst = { workspace = true}
codegen-sdk-common = { workspace = true }
salsa = { workspace = true }
ambassador = {workspace = true}
[dev-dependencies]
test-log = { workspace = true }
tempfile = { workspace = true }
codegen-sdk-typescript = { workspace = true }
