[package]
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
name = "codegen-sdk-ast"


[dependencies]
codegen-sdk-cst = { workspace = true}
codegen-sdk-common = { workspace = true }
salsa = { workspace = true }
ambassador = {workspace = true}
[dev-dependencies]
test-log = { workspace = true }
tempfile = { workspace = true }
codegen-sdk-typescript = { workspace = true }
