[package]
name = "codegen-sdk-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
tree-sitter = { workspace = true }
ouroboros = { workspace = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-json = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
lazy_static = "1.5.0"
thiserror = "2.0.11"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
convert_case = { workspace = true }
tree-sitter-query = {git = "https://github.com/tree-sitter-grammars/tree-sitter-query"}
tree-sitter-language = "0.1.4"
[features]
python = ["dep:tree-sitter-python"]
json = ["dep:tree-sitter-json"]
java = ["dep:tree-sitter-java"]
typescript = ["dep:tree-sitter-typescript", "dep:tree-sitter-javascript"]
all = ["python", "typescript", "json", "java"]
