[package]
name = "codegen-sdk-common"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-json = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-yaml = { workspace = true, optional = true }
tree-sitter-toml-ng = { workspace = true, optional = true }
tree-sitter-md = { workspace = true, optional = true }
lazy_static = "1.5.0"
thiserror = "2.0.11"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
convert_case = { workspace = true }
tree-sitter-query = {git = "https://github.com/tree-sitter-grammars/tree-sitter-query", optional = true}
tree-sitter-language = "0.1.4"
phf = { version = "0.11.3", features = ["macros"] }
rkyv = { workspace = true }
xdg = "2.5.2"
base64 = "0.22.1"
buildid = "1.0.3"
sha2 = "0.10.8"
zstd = { version = "0.13.2", features = ["zstdmt"] }
enum_delegate = { workspace = true }
mockall = { workspace = true }
[dev-dependencies]
test-log = { workspace = true }
[features]
python = ["dep:tree-sitter-python"]
json = ["dep:tree-sitter-json"]
java = ["dep:tree-sitter-java"]
typescript = ["dep:tree-sitter-typescript", "dep:tree-sitter-javascript"]
rust = ["dep:tree-sitter-rust"]
go = ["dep:tree-sitter-go"]
ruby = ["dep:tree-sitter-ruby"]
yaml = ["dep:tree-sitter-yaml"]
toml = ["dep:tree-sitter-toml-ng"]
markdown = ["dep:tree-sitter-md"]
ts_query = ["dep:tree-sitter-query"]
default = ["all"]
all = ["python", "typescript", "json", "java", "ts_query", "ruby", "rust", "go", "yaml", "toml"]
