[package]
name = "codegen-sdk-cst-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
convert_case = { workspace = true }
prettyplease = {workspace = true}
syn = { workspace = true }
tree-sitter = { workspace = true }
log = { workspace = true }
codegen-sdk-common = { workspace = true }
anyhow = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
tempfile = "3.8.1"
mockall_double = "0.3.1"

[dev-dependencies]
tree-sitter-python = { workspace = true }
test-log = { workspace = true }
insta = { workspace = true }
