[package]
name = "codegen-sdk-cst"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
codegen-sdk-common = { path = "../codegen-sdk-common" }
salsa = { workspace = true }
dashmap = "6.1.0"
thiserror = {workspace = true}
indextree = { workspace = true }

[features]
serialization = ["codegen-sdk-common/serialization"]
