[package]
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
name = "codegen-sdk-cst"


[dependencies]
bytes = { workspace = true }
codegen-sdk-common = { path = "../codegen-sdk-common" }
salsa = { workspace = true }
dashmap = "6.1.0"
thiserror = {workspace = true}
indextree = { workspace = true }

[features]
serialization = ["codegen-sdk-common/serialization"]
