[package]
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
name = "codegen-sdk-cst"
description = "Common code for the CST"

[dependencies]
bytes = { workspace = true }
codegen-sdk-common = { path = "../codegen-sdk-common" }
salsa = { workspace = true }
dashmap = { workspace = true }
thiserror = {workspace = true}
indextree = { workspace = true }
log = { workspace = true }
[features]
serialization = ["codegen-sdk-common/serialization"]
