[package]
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
name = "codegen-sdk-macros"


[dependencies]
codegen-sdk-common = { workspace = true}
quote = { workspace = true }
proc-macro2 = { workspace = true }
[lib]
proc-macro = true
