[package]
name = "codegen-sdk-resolution"
description = "Traits for implementing type resolution in codegen-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
salsa = { workspace = true }
log = {workspace = true}
codegen-sdk-ast = { workspace = true }
codegen-sdk-common = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
ambassador = { workspace = true }
codegen-sdk-cst = { workspace = true }
indexmap = "2"
