[package]
name = "pink-python"
description = "Python bindings for pink"
version = "0.1.0"
edition = "2024"
# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
codegen-sdk-analyzer = { workspace = true, features = ["python", "typescript", "toml", "yaml", "json"]}
codegen-sdk-resolution = { workspace = true }
pyo3 = { version = "0.23.5", features = ["anyhow", "abi3-py311"] }
pyo3-log = "0.12.1"
pyo3-bytes = "0.1.3"
codegen-sdk-python = { workspace = true }
codegen-sdk-common = { workspace = true }
anyhow = { workspace = true }
# pyo3-stub-gen = "0.7.0"
[build-dependencies]
codegen-bindings-generator = { workspace = true }
codegen-sdk-common = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
