[package]
name = "codegen-sdk-ts_query"
version = "0.1.0"
edition = "2024"

[dependencies]
codegen-sdk-common = { workspace = true, features = ["ts_query"] }
salsa = { workspace = true }
tree-sitter = { workspace = true }
derive_more = { workspace = true }
ambassador = { workspace = true }
derive_generic_visitor = { workspace = true }
subenum = {workspace = true}
bytes = { workspace = true }
codegen-sdk-cst = { workspace = true }
indextree = { workspace = true }
[build-dependencies]
codegen-sdk-cst-generator = { workspace = true }
codegen-sdk-common = { workspace = true, features = ["ts_query"] }
env_logger = { workspace = true }
log = { workspace = true }
[features]
serialization = ["codegen-sdk-common/serialization"]
