[package]
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
name = "codegen-sdk-ts_query"
[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
codegen-sdk-common = { workspace = true, features = ["ts_query"] }
salsa = { workspace = true }
tree-sitter = { workspace = true }
derive_more = { workspace = true }
ambassador = { workspace = true }
subenum = { workspace = true }
bytes = { workspace = true }
codegen-sdk-cst = { workspace = true }
indextree = { workspace = true }
[build-dependencies]
codegen-sdk-cst-generator = { workspace = true }
codegen-sdk-common = { workspace = true, features = ["ts_query"] }
env_logger = { workspace = true }
log = { workspace = true }
[features]
serialization = ["codegen-sdk-common/serialization"]
